[tool.poetry]
name = "random-quote-generator-tugrulcan"
version = "0.1.0"
description = ""
authors = ["tugrulcansollu <tugrulsollu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
